--- a/package.json
+++ b/package.json
@@ -4,16 +4,11 @@
   "description": "css layout engine",
   "main": "waterfall.js",
   "dependencies": {
+    "grunt": "^0.4.5",
     "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-connect": "^0.10.1",
-    "grunt": "^0.4.5",
-    "grunt-contrib-watch": "^0.6.1"
-  },
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-connect": "^0.10.1",
-    "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "less-plugin-clean-css": "^1.5.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
