--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "waterfall.js",
   "dependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-connect": "^0.10.1",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-watch": "^0.6.1",
     "less-plugin-clean-css": "^1.5.1"
   },
